fix(header): update container border color to primary for improved visibility

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -51,7 +51,7 @@
     justify-content: flex-end;
     line-height: 150%;
     user-select: none;
-    border: 1px solid $surface-border;
+    border: 1px solid $primary-color;
     border-radius: 5px;
     background: rgba(24, 24, 27, 0.42);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
